Version 1.3.0
-------------
Added: support for more DEHEXTRA features: extra thing fields and extra sounds.
Added: Doom Retro strings and Blood and Shadow offset thing fields.
Added: better Linux compatibility. The application starts and is somewhat usable, but a number of UI issues still prevent it from working well.
Added: state preview now uses a state's unused 1 and 2 parameters as offsets if previewing a state from the weapons editor (right-click state label).
Changed: engine table files can now include (base table) files. This leads to smaller filesizes and makes for easier updating. As a result of this, strings in the Doom 1.9 and Ultimate Doom 1.9 tables are now keyed by their index.
Changed: engine table files list only fields used by that engine to reduce their size and improve maintainability. Default entries for things, states, weapons, ammo and sounds are provided for tables that extend existing ones.
Changed: string editing for vanilla patches will allow any number of characters to be entered, but disallow using the new string if it is too long.
Changed: thing editor properties, states, sounds and flags are now tabbed to save on screen real estate. Especially useful if an engine has many thing properties.
Fixed: the state animation preview now displays action names instead of code pointers for non-extended patches.
Fixed: a weapon's FireCGun and FirePlasma actions would only mark the extra muzzle flash state as used if the action was used on the first fire state.
Fixed: loading non-extended patches that try to set a codepointer on a state that originally had none will now display a warning. Thanks to Zodomaniac.
Fixed: saving a yet unsaved patch while exiting caused a crash. Thanks to TheStupidestBeing.
Fixed: BEX strings that do not appear in the engine selected for a patch will now not be visible in the strings editor, but will remain in the saved patch.