@@ -1044,7 +1044,7 @@
 			"statePain": 985,
 			"stateRaise": 993,
 			"stateSpawn": 972,
-			"radius": 784272,
+			"radius": 786432,
 			"_name": "Dog"
 		},
 		{
